# research_wiki

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.agent/: CLAUDE_code.md  guidelines.md  ingest-plan.md  scale-features-spec.md  tasks.md  wiki-context.md
kb/: CLAUDE.md
kb/raw/literature/: library.json
kb/raw/research/: deep-forecaster-tsf-review-2026.md
kb/raw/seed/: README.md  embedding_model_v1_context.md  p1_cluster-pretrained_deep-models.md  p2_causal_embedding_model.md  p3_forecast_scenario_engine.md  p4_availability_nowcasting.md  px_cross-project_strategy.md  sybilion_ai_projects_review.pptx
kb/templates/: project.md
kb/wiki/: index.md  log.md  overview.md
kb/wiki/comparisons/: portfolio-evaluation.md  tsf-backbone-comparison.md
kb/wiki/concepts/: attention-faithfulness.md  causal-covariate-embeddings.md  cluster-pretrained-deep-models.md  cpcv-validation.md  evidence-ledger.md  explicit-evidence-graph.md  hierarchical-entmax-covariate-selection.md  mixed-frequency-nowcasting.md  scenario-re-run-api.md
kb/wiki/decisions/: adr-0001-project-sequencing.md
kb/wiki/entities/: p4-public-data-sources.md
kb/wiki/experiments/: exp-p1-cluster-quality-gate.md  exp-p2-causal-retrieval-validation.md  exp-p3-scenario-engine-mvp.md  exp-p4-public-first-nowcast-mvp.md
kb/wiki/projects/: p1-cluster-pretrained-deep-models.md  p2-causal-embedding-v2.md  p3-scenario-engine.md  p4-availability-nowcasting-graph.md
kb/wiki/shared/: evaluation-strategy.md  open-questions.md  project-map.md  research-backlog.md  risks-and-caveats.md
kb/wiki/sources/: src-2026-05-sybilion-ai-projects-review.md  src-2026-06-aghabozorgi-ts-clustering-survey.md  src-2026-06-almahri-agentic-sc.md  src-2026-06-arango-chronosx.md  src-2026-06-ates-counterfactual-ts.md  src-2026-06-auer-tirex.md  src-2026-06-bagnall-ts-bakeoff.md  src-2026-06-bastings-elephant-interpretability-2020.md  src-2026-06-beck-xlstm.md  src-2026-06-besta-graph-databases.md  src-2026-06-bibal-attention-explanation-survey-2022.md  src-2026-06-challu-nhits.md  src-2026-06-chen-channel-clustering.md  src-2026-06-chen-closer-look-transformers.md  src-2026-06-cheng-shield.md  src-2026-06-cheng-timemae.md  src-2026-06-choi-multitask-ssl.md  src-2026-06-cortes-winner-takes-all.md  src-2026-06-dao-mamba2.md  src-2026-06-ekambaram-ttm.md  src-2026-06-eldele-ca-tcc.md  src-2026-06-eldele-label-efficient-review.md  (+89 more)
src/wikitools/: cli.py  wikilib.py
tests/integration/: conftest.py  test_semantic.py
tests/unit/: test_bulk_import.py  test_check.py  test_cli.py  test_extract.py  test_index.py  test_lint.py  test_search.py  test_toc.py  test_wikilib.py
(+243 files in other folders)
